--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3'
 services:
   restaurant_db:
     image: postgres:16
-    container_name: KGourmetAuth
+    container_name: GestOpiAuth
     restart: always
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: KGourmetAuth
+      POSTGRES_DB: GestOpiAuth
     ports:
       - "5436:5432"
     volumes:
