Se modifico la contrasena que esta en el .env y el nombre de quien envia el email

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ JWT_SECRET=JWTsecretoGestorOpiniones!
 JWT_EXPIRES_IN=1h
 
 EMAIL_USER=quuuiiinntooo@gmail.com
-EMAIL_PASS=eldq idpb vivv ycel   
+EMAIL_PASS=jmnx pcii umxj hkzi
 
 JWT_REFRESH_EXPIRES_IN=7d
 JWT_ISSUER=AuthService
