Se agregaron modificaciones necesarias para el funcionamiento correcto de la API

--- a/AuthGestOpi/.env
+++ b/AuthGestOpi/.env
@@ -6,6 +6,7 @@ PORT=3005
 DB_HOST=localhost
 DB_PORT=5436
 DB_NAME=GestOpiAuth
+DB_USER=postgres
 DB_USERNAME=root
 DB_PASSWORD=admin
 DB_SQL_LOGGING=false
